# pear/models/dish.py
@@ -2,15 +2,15 @@
 from sqlalchemy import func
 
 from pear.models.base import BaseDao
-from pear.models.tables import dish
+from pear.models.tables import ele_dish
 from sqlalchemy.sql import select
 
 
-class DishDao(BaseDao):
+class EleDishDao(BaseDao):
 
     @classmethod
     def create(cls, food_id, restaurant_id, name, rating, moth_sales, rating_count, price, crawler_id):
-        sql = dish.insert().values(
+        sql = ele_dish.insert().values(
             food_id=food_id,
             restaurant_id=restaurant_id,
             name=name,
@@ -24,10 +24,10 @@ class DishDao(BaseDao):
 
     @classmethod
     def get_by_crawler_id(cls, crawler_id, page=1, per_page=20):
-        sql = select([dish]).where(
-            dish.c.crawler_id == crawler_id
+        sql = select([ele_dish]).where(
+            ele_dish.c.crawler_id == crawler_id
         )
-        count_sql = select([func.count(dish.c.id)]).where(dish.c.crawler_id == crawler_id)
+        count_sql = select([func.count(ele_dish.c.id)]).where(ele_dish.c.crawler_id == crawler_id)
         return cls.get_list(sql, page, per_page, count_sql)
 
     @classmethod
