# pear/models/rate.py
@@ -4,16 +4,17 @@ from sqlalchemy import select, func
 from sqlalchemy.sql import and_
 
 from pear.models.base import BaseDao
-from pear.models.tables import rate
+from pear.models.tables import ele_rate
 
 
-class RateDao(BaseDao):
+class EleRateDao(BaseDao):
 
     @classmethod
-    def create(cls, restaurant_crawler_id, rating_start, rated_at, rating_text, time_spent_desc, food_id, food_name,
-               food_star, food_rate, restaurant_id):
-        sql = rate.insert().values(
+    def create(cls, restaurant_crawler_id, rating_id, rating_start, rated_at, rating_text, time_spent_desc, food_id,
+               food_name, food_star, food_rate, restaurant_id):
+        sql = ele_rate.insert().values(
             restaurant_crawler_id=restaurant_crawler_id,
+            rating_id=rating_id,
             rating_start=rating_start,
             rated_at=rated_at,
             rating_text=rating_text,
@@ -25,22 +26,22 @@ class RateDao(BaseDao):
 
     @classmethod
     def get_by_restaurant_id(cls, restaurant_crawler_id, restaurant_id, rating_start=-1, page=1, per_page=20):
-        sql = select([rate]).where(
+        sql = select([ele_rate]).where(
             and_(
-                rate.c.restaurant_id == restaurant_id,
-                rate.c.restaurant_crawler_id == restaurant_crawler_id
+                ele_rate.c.restaurant_id == restaurant_id,
+                ele_rate.c.restaurant_crawler_id == restaurant_crawler_id
             )
         )
         if rating_start > 0:
             sql = sql.where(
-                rate.c.rating_start == rating_start
+                ele_rate.c.rating_start == rating_start
             )
         return cls.get_list(sql, page, per_page)
 
     @classmethod
     def get_by_crawler_id(cls, crawler_id, page=1, per_page=20):
-        sql = select([rate]).where(rate.c.restaurant_crawler_id == crawler_id)
-        count_sql = select([func.count(rate.c.id)]).where(rate.c.restaurant_crawler_id == crawler_id)
+        sql = select([ele_rate]).where(ele_rate.c.restaurant_crawler_id == crawler_id)
+        count_sql = select([func.count(ele_rate.c.id)]).where(ele_rate.c.restaurant_crawler_id == crawler_id)
         return cls.get_list(sql, page, per_page, count_sql)
 
     @classmethod
@@ -49,6 +50,7 @@ class RateDao(BaseDao):
             return None
         return {
             'id': item.id,
+            'rating_id': item.rating_id,
             'rating_start': item.rating_start,
             'rated_at': item.rated_at,
             'rating_text': item.rating_text,
