# pear/models/tables.py
@@ -7,7 +7,7 @@ engine = create_engine(MYSQL_CONFIG, echo=False)
 metadata = MetaData(bind=engine)
 
 crawler = Table('crawler', metadata, autoload=True)
-dish = Table('dish', metadata, autoload=True)
-restaurant = Table('restaurant', metadata, autoload=True)
 user = Table('user', metadata, autoload=True)
-rate = Table('rate', metadata, autoload=True)
+ele_dish = Table('ele_dish', metadata, autoload=True)
+ele_restaurant = Table('ele_restaurant', metadata, autoload=True)
+ele_rate = Table('ele_rate', metadata, autoload=True)
